<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin23"
        android:layout_marginRight="@dimen/margin23"
        >

        <ImageView
            android:layout_width="@dimen/nfl_logo_width"
            android:layout_height="@dimen/nfl_logo_height"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/imageViewDesc"
            android:src="@drawable/football_nfl" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/margin5"
            android:id="@+id/linearLayout">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/teamA"
                    android:textColor="@color/textColor" />

                <TextView
                    android:id="@+id/score_a_team"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingBottom="@dimen/padding10"
                    android:paddingTop="@dimen/padding5"
                    android:text="@string/textZero"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/teamScore" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/touchDown"
                    android:textColor="@color/textColor" />

                <TextView
                    android:id="@+id/touchDown_a_team"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/padding5"
                    android:text="@string/textZero"
                    android:textColor="@color/textColor" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/fieldGoal"
                    android:textColor="@color/textColor" />

                <TextView
                    android:id="@+id/fieldGoal_a_team"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/padding5"
                    android:text="@string/textZero"
                    android:textColor="@color/textColor" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/safety"
                    android:textColor="@color/textColor" />

                <TextView
                    android:id="@+id/safety_a_team"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/padding5"
                    android:text="@string/textZero"
                    android:textColor="@color/textColor" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/drop"
                    android:textColor="@color/textColor" />

                <TextView
                    android:id="@+id/drop_a_team"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/padding5"
                    android:text="@string/textZero"
                    android:textColor="@color/textColor" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margin23"
                    android:onClick="incrementTouchDownA"
                    android:text="@string/firstButText"
                    android:textColor="@color/textColorButton"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margin23"
                    android:onClick="incrementFieldGoalA"
                    android:text="@string/secondButText"
                    android:textColor="@color/textColorButton"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margin23"
                    android:onClick="incrementSafetyA"
                    android:text="@string/thirdButText"
                    android:textColor="@color/textColorButton"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="@dimen/margin23"
                    android:onClick="incrementDropA"
                    android:text="@string/fourthButText"
                    android:textColor="@color/textColorButton"/>


            </LinearLayout>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/teamB"
                    android:textColor="@color/textColor" />

                <TextView
                    android:id="@+id/score_b_team"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:paddingBottom="@dimen/padding10"
                    android:paddingTop="@dimen/padding5"
                    android:text="@string/textZero"
                    android:textColor="@color/textColor"
                    android:textSize="@dimen/teamScore" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/touchDown"
                    android:textColor="@color/textColor" />

                <TextView
                    android:id="@+id/touchDown_b_team"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/padding5"
                    android:text="@string/textZero"
                    android:textColor="@color/textColor" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/fieldGoal"
                    android:textColor="@color/textColor" />

                <TextView
                    android:id="@+id/fieldGoal_b_team"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/padding5"
                    android:text="@string/textZero"
                    android:textColor="@color/textColor" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/safety"
                    android:textColor="@color/textColor" />

                <TextView
                    android:id="@+id/safety_b_team"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/padding5"
                    android:text="@string/textZero"
                    android:textColor="@color/textColor" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="@string/drop"
                    android:textColor="@color/textColor" />

                <TextView
                    android:id="@+id/drop_b_team"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:padding="@dimen/padding5"
                    android:text="@string/textZero"
                    android:textColor="@color/textColor" />


                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin23"
                    android:onClick="incrementTouchDownB"
                    android:text="@string/firstButText"
                    android:textColor="@color/textColorButton"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin23"
                    android:onClick="incrementFieldGoalB"
                    android:text="@string/secondButText"
                    android:textColor="@color/textColorButton"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin23"
                    android:onClick="incrementSafetyB"
                    android:text="@string/thirdButText"
                    android:textColor="@color/textColorButton"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/margin23"
                    android:onClick="incrementDropB"
                    android:text="@string/fourthButText"
                    android:textColor="@color/textColorButton"/>


            </LinearLayout>

            </LinearLayout>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="resetScoreAndCounters"
                android:text="@string/reset"
                android:textColor="@color/textColorButton"/>
        </LinearLayout>

    </RelativeLayout>

</ScrollView>